0.2-beta9
 * Change criteria tab to table UI [gotcha]

 * Added message when clicking remove on criteria without selecting first
   [gotcha]

0.2-beta8 - 2004-07-21

 * Fixed validation problem with mx tidy validator and file uploads
   [tiran]
   
 * Changed time range ints in FriendlyDateCriterion to strings [tiran]
 
 * Reenable implicitly addable for ATFavorite [tiran]

 * Added validation for setup of sort order on topics [gotcha]

 * Added getSize, getHeight, getWidth methods and width/height attributes to
   ATImage [tiran].

0.2-beta7 - 2004-06-27

 * Moved around some code from ATFolder to ATContentType [tiran]

 * Fixed problem with index_html in ATBTreeFolder [tiran]

 * Fixed wrong portal type in Members ATBTreeFolder after migration [tiran]

 * Added initializeArchetype() to ATContentType base class and changed it to
   use edit() instead of update() to make invokeFactory compatible with the old
   cmf types syntax.

 * Fixed problem with _getPortalTypeName in initializeArchetype() phase of
   object creation. Before the fix the portal type name was the original type
   name (e.g. ATDocument) because it was changed after the initializeArchetype
   call by the portal types tool. This issue has caused some wired problems with
   LinguaPlone and workflows. [tiran]

 * ATFile file field and ATImage image field are now language independend.
   Later I will add a I18NImage and I18NFile if needed. Having a seperate type
   for language dependend content for file and image is in my opinion easier to
   understand for people. Besides it's like Zope3. [tiran]

 * Removed TemplateMixin specific code from ATContentType base class. It was
   moved to TemplateMixin some time ago. [tiran]

 * Better error reporting for migration errors [tiran]

 * Fixed migration problem when LinguaPlone was installed [tiran]

 * Added - as valid char for ids [tiran]

 * Reindex only Type, portal_type and meta_type in switching script [tiran]
